fixed typo in wordlist

--- a/pictors.html
+++ b/pictors.html
@@ -795,7 +795,7 @@ k8vC3kTJOKEGVV577NPfIXK4hnsie+s+9sIKzzwIzzzgeRS5JI743Yz92XHDvtJosX88Yk06C+ce5Yjn
         "Notwendigkeit",
         "November",
         "Nudel",
-        "Nudelholzr",
+        "Nudelholz",
         "Nummer",
         "Nutzung",
         "Nähe",
